@@ -32,16 +32,16 @@ xeyes_SOURCES =	\
         transform.h \
         xeyes.c
 
-appman_SOURCES = \
+appman_PRE = \
         xeyes.man
 
 EXTRA_DIST = eyes.bit eyesmask.bit
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
